--- a/core/templates/core/refassetcard_form.html
+++ b/core/templates/core/refassetcard_form.html
@@ -85,7 +85,7 @@
                                    id="EmployeeIdDisplay"
                                    name="EmployeeIdDisplay"
                                    readonly
-                                   placeholder="Click to select employee..."
+                                   placeholder="Эд хариуцлагчийг сонгох..."
                                    onclick="openClientPopup(this, null, { clientTypeId: 3 })"
                                    value="{% if asset_card and asset_card.ClientId %}{{ asset_card.ClientId.ClientCode }} - {{ asset_card.ClientId.ClientName }}{% endif %}"
                                    class="w-full px-2 py-1 text-xs border border-gray-300 rounded cursor-pointer bg-white focus:outline-none focus:ring-1 focus:ring-blue-500">
