--- a/core/templates/core/components/cash_document_detail_grid.html
+++ b/core/templates/core/components/cash_document_detail_grid.html
@@ -9,7 +9,7 @@
         <table class="min-w-full divide-y divide-gray-200" style="table-layout: auto;">
             <thead class="bg-gray-50">
                 <tr>
-                    <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">Account</th>
+                    <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">ДАНС</th>
                     <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">Харилцагч</th>
                     <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200" style="width: 60px; max-width: 60px;">Валют</th>
                     <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">Ханш</th>
